# helix-ttd-v4.0

./: Helix-TTD Core Ethos_ Trusted AI Governance Blueprint.pptx  LICENSE  README.md  helix-ttd_core_ethos.md  tpaf_runbook_v1.0.md
.cargo/: config.toml
.github/workflows/: helix_rem_enforcer.yml  rem-gate.yml
blueprints/: qsr_rubric_v1.4.md
rem/: Cargo.toml
rem/spec/: REM.k
rem/src/: lib.rs
templates/: audit_block_schema.json  compliance_checklist.json
