[package]
name = "helix_rem"  # Use underscores to match the filename exactly
version = "0.1.0"
edition = "2021"

# CRITICAL SECTION FOR MUSL/STATIC BUILDS
[lib]
name = "helix_rem"           # Output will be libhelix_rem.a
crate-type = ["staticlib"]   # Forces generation of .a file

[dependencies]
# Add any deps here
